Prevent html from getting horizontal scroll

--- a/app/assets/stylesheets/base/_layout.scss
+++ b/app/assets/stylesheets/base/_layout.scss
@@ -6,6 +6,7 @@
 
 html {
   background: #0f6;
+  overflow-x: hidden;
 }
 
 html,
